--- a/helloworld.html
+++ b/helloworld.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css" />
     <title>はじめてのプログラミング</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   </head>
   <body>
-    <div id="app">
-      {{ message }}
-    </div>
+    <div id="app-1">{{ message }}</div>
 
     <div id="app-2">
       <span v-bind:title="message">
-        Hover your mouse over me for a few seconds
-        to see my dynamically bound title!
+        Hover your mouse over me for a few seconds to see my dynamically bound
+        title!
       </span>
     </div>
 
@@ -26,9 +24,7 @@
 
     <div id="app-4">
       <ol>
-        <li v-for="todo in todos">
-          {{ todo.text }}
-        </li>
+        <li v-for="todo in todos">{{ todo.text }}</li>
       </ol>
     </div>
 
@@ -39,7 +35,7 @@
 
     <div id="app-6">
       <p>{{ mess }}</p>
-      <input v-model="mess">
+      <input v-model="mess" />
     </div>
 
     <div id="app-7">
@@ -50,6 +46,57 @@
           v-bind:key="item.id"
         ></todo-item>
       </ol>
+    </div>
+
+    <div id="app">
+      <p>{{foo}}</p>
+      <button v-on:click="foo = 'baz'">Change it</button>
+    </div>
+
+    <div class="js-component01">
+      <p><input v-model="text" /></p>
+      <p>ここに入力文字を出すよ: {{ text }}</p>
+      これでもなる：<span v-text="text"></span>
+    </div>
+
+    <div class="js-component02">
+      <p><input v-model="input" type="text" /></p>
+      <button v-on:click="output">入力文字反映</button>
+      <p>ここに出力するよ： {{ text }}</p>
+    </div>
+
+    <div class="js-component03">
+      <p><input v-model="input" type="text" /></p>
+      <button v-on:click="hoge">入力反映</button>
+      <div>ここにコード表示 {{ html }}</div>
+      <div>ここに出力だすよ <span v-html="html"></span></div>
+    </div>
+
+    <div class="js-component04">
+      <input v-model="a" type="a" />
+      <input v-model="momo" />
+      <p>ここに2倍の数をだすよ: {{ a * 2 }}</p>
+      <p>文字： {{ momo }}</p>
+    </div>
+
+    <div class="js-component05">
+      <input v-model="text" type="text" />
+      <p>ここに大文字の表示するよ: {{ text | toUpperCase }}</p>
+    </div>
+
+    <div id="number">
+      <p>{{ price | numberFormat }}</p>
+      <input v-bind:value="price | numberFormat" type="text" />
+    </div>
+
+    <div class="js-component06">
+      <input v-model="number" type="number">
+      <p>ここに3倍の数をだすよ: {{ calc3Times }}</p>
+    </div>
+
+    <div class="js-component07">
+      <p>税抜価格：<input v-model="origin" type="number"></p>
+      <p>税込価格：<input v-model="withTax" type="number"></p>
     </div>
     <script src="helloworld.js"></script>
   </body>
